syntax = "proto3";

option csharp_namespace = "CloudDrop";

import "google/protobuf/wrappers.proto";

package filetransfer;

service FileTransferService {
    rpc StartReceivingFile (StartRequest) returns (StartReceivingResponse);
    rpc ReceiveFileChunk (stream Chunk) returns (Response);
    rpc FinishReceivingFile (FinishReceivingMessage) returns (Response);
    
    rpc SendFileStateChange (SendFileStateChangeRequest) returns (Response);
    rpc SendFileChunks (SendFileChunksRequest) returns (stream SendFileChunk);
}

message StartRequest {
    string name = 1;
    string type = 2;
    int32 storage_id = 3;
    google.protobuf.Int32Value parent_id = 4;
}

message Chunk {
    bytes data = 1;
    string file_path = 2;
    int32 content_id = 3;
}

message Response {
    string message = 1;
}

message StartReceivingResponse {
    string file_path = 1;
    int32 content_id = 2;
}

message FinishReceivingMessage {
    int32 content_id = 1;
}



message SendFileStateChangeRequest {
    int32 content_id = 1;
    SendFileStateChangeEnum state = 2;
    
}

enum SendFileStateChangeEnum {
    START = 0;
    FINISH = 1;
}

message SendFileChunksRequest {
    int32 content_id = 1;
}

message SendFileChunk {
    bytes data = 1;
    string file_name = 2;
    int64 total_size = 3;
}